Bug Fixes and Firebase push notification

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -127,7 +127,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:hint=""
                             android:imeOptions="actionNext"
                             android:inputType="textPassword"
@@ -155,6 +155,7 @@
                         app:boxCornerRadiusTopEnd="8dp"
                         app:boxCornerRadiusTopStart="8dp"
                         app:boxStrokeColor="@color/status"
+                        app:hintTextAppearance="@style/TextLabel"
                         app:hintTextColor="@color/status"
                         app:passwordToggleEnabled="true"
                         app:passwordToggleTint="#4C4C4C">
@@ -358,6 +359,7 @@
                         app:boxCornerRadiusTopEnd="8dp"
                         app:boxCornerRadiusTopStart="8dp"
                         app:boxStrokeColor="@color/status"
+                        app:hintTextAppearance="@style/TextLabel"
                         app:hintTextColor="@color/status">
 
                         <com.google.android.material.textfield.TextInputEditText
