--- a/app/src/main/res/layout/activity_pay_request_success.xml
+++ b/app/src/main/res/layout/activity_pay_request_success.xml
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="48.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_14sp"></TextView>
 
@@ -153,7 +153,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="30dp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="38.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_14sp"></TextView>
 
