--- a/app/src/main/res/layout/transdetailsbank.xml
+++ b/app/src/main/res/layout/transdetailsbank.xml
@@ -173,7 +173,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="45.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_16sp"></TextView>
 
@@ -245,7 +245,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="1.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_16sp"></TextView>
 
@@ -334,7 +334,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="45.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_16sp"></TextView>
             </RelativeLayout>
