--- a/app/src/main/res/layout/transdetailsbuy.xml
+++ b/app/src/main/res/layout/transdetailsbuy.xml
@@ -214,7 +214,7 @@
                         android:fontFamily="@font/opensans_bold"
 
                         android:gravity="right"
-                        android:text="45.00 GBT"
+                        android:text=""
                         android:textColor="@color/headcolor"
                         android:textSize="@dimen/text_size_16sp"></TextView>
                 </LinearLayout>
@@ -310,7 +310,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_bold"
                         android:gravity="right"
-                        android:text="45.00 GBT"
+                        android:text=""
                         android:textColor="@color/headcolor"
                         android:textSize="@dimen/text_size_16sp"></TextView>
                 </LinearLayout>
