--- a/app/src/main/res/layout/transdetailsgift.xml
+++ b/app/src/main/res/layout/transdetailsgift.xml
@@ -248,7 +248,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="50.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_16sp"></TextView>
 
@@ -272,7 +272,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="1.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_16sp"></TextView>
 
@@ -327,7 +327,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="45.00 GBT"
+                    android:text=""
                     android:textColor="@color/headcolor"
                     android:textSize="@dimen/text_size_16sp"></TextView>
             </RelativeLayout>
