--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,14 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary_green">#00A6A2</color>
     <color name="text_color">#151515</color>
+
+
+    <color name="light_gray">#C5C5C5</color>
+    <color name="secondary_color">#00A6A2</color>
+    <color name="primary_color">#00A6A2</color>
+    <color name="inactive_color">#B5E2E0</color>
+    <color name="primary_black">#151515</color>
+    <color name="error_red">#E72222</color>
+    <color name="dark_grey">#767676</color>
+
 </resources>
