--- a/app/src/main/res/layout/activity_otpvalidation.xml
+++ b/app/src/main/res/layout/activity_otpvalidation.xml
@@ -10,6 +10,7 @@
     android:background="@color/white">
 
     <ImageView
+        android:id="@+id/otpValidationCloseIV"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/ic_back"
@@ -17,6 +18,7 @@
         android:layout_marginTop="40dp"/>
 
     <TextView
+        android:id="@+id/headerTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Please Verify Your Phone Number"
@@ -27,6 +29,7 @@
         />
 
     <TextView
+        android:id="@+id/subHeaderTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="We sent you 6-digit code to the register phone number (661) 726-0369"
