--- a/app/src/main/res/layout/activity_secure_account.xml
+++ b/app/src/main/res/layout/activity_secure_account.xml
@@ -7,6 +7,7 @@
     tools:context=".view.SecureAccount"
     android:padding="25dp"
     android:background="@color/white"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     >
 
     <LinearLayout
@@ -39,7 +40,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/bg_secure_account"/>
+            android:src="@drawable/bg_secure_account"
+            android:layout_gravity="bottom"/>
 
     </LinearLayout>
 
