--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -6,20 +6,23 @@
     android:background="@color/white">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/topIV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/bg_onboard_frag_one"
             android:layout_marginStart="35dp"
-            android:layout_above="@+id/coyniLogo"
             android:layout_marginEnd="-100dp"
-            android:layout_marginTop="-100dp"/>
+            android:layout_marginTop="-100dp"
+            android:layout_alignParentTop="true"
+            android:layout_above="@+id/bottomIV"/>
         <ImageView
+            android:id="@+id/bottomIV"
             android:layout_width="173dp"
             android:layout_height="70dp"
             android:src="@drawable/ic_coyni_logo"
@@ -28,6 +31,6 @@
             android:layout_marginBottom="60dp"
             android:layout_gravity="center"
             />
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
