--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     android:paddingLeft="32dp"
     tools:context=".view.LoginActivity">
 
@@ -27,7 +27,7 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="500dp"
+                android:layout_width="match_parent"
                 android:layout_height="400dp"
                 android:layout_marginTop="-80dp"
                 android:layout_marginRight="-175dp"
@@ -50,7 +50,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.305"
                 app:layout_constraintStart_toStartOf="parent" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -98,26 +97,22 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/secondary_color"
-        />
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/secondary_color" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/remembertxt"
-            android:textSize="13dp"
             android:textColor="@color/primary_black"
-            />
+            android:textSize="13dp" />
 
     </LinearLayout>
 
@@ -125,9 +120,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="12dp"
-        android:layout_marginRight="32dp">
+        android:layout_marginRight="32dp"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/forgotpwd"
             android:layout_width="wrap_content"
@@ -147,49 +143,52 @@
             android:textColor="@color/primary_green"
             android:textSize="13dp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingRight="30dp">
-    <TextView
-        android:id="@+id/nextBtn"
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_marginTop="24dp"
-        android:layout_gravity="center"
-        android:background="@drawable/nextbtnbackground"
-        android:fontFamily="@font/opensans_bold"
-        android:paddingTop="15dp"
-        android:text="Log in"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="13dp" />
+
+        <TextView
+            android:id="@+id/nextBtn"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/nextbtnbackground"
+            android:fontFamily="@font/opensans_bold"
+            android:paddingTop="15dp"
+            android:text="Log in"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="13dp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
-    <TextView
-        android:id="@+id/mailpassIncorrect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LoginFailedSheet"
-        android:textColor="@color/black"
-        android:padding="10dp"
+
+        <TextView
+            android:id="@+id/mailpassIncorrect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="LoginFailedSheet"
+            android:textColor="@color/black"
 
             />
 
-    <TextView
-        android:id="@+id/faceidNotAvaiSheet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="face id not available bottomsheet"
-        android:textColor="@color/black"
-        android:padding="10dp"
-        />
+        <TextView
+            android:id="@+id/faceidNotAvaiSheet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:padding="10dp"
+            android:text="face id not available bottomsheet"
+            android:textColor="@color/black" />
     </LinearLayout>
 </LinearLayout>
 
