--- a/app/src/main/res/layout/activity_pinkeyboard.xml
+++ b/app/src/main/res/layout/activity_pinkeyboard.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PINActivity"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.PINActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_above="@id/bottomKeyPad"
         android:layout_alignParentTop="true"
-        android:layout_above="@id/bottomKeyPad">
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="20dp"
@@ -26,19 +26,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
+            android:fontFamily="@font/opensans_bold"
             android:text="Choose your PIN"
             android:textAlignment="center"
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/text_size_24sp"
-            android:fontFamily="@font/opensans_bold"/>
+            android:textSize="@dimen/text_size_24sp" />
 
         <LinearLayout
             android:id="@+id/layoutlinear1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_marginTop="79dp">
+            android:layout_marginTop="79dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -132,9 +132,9 @@
         android:id="@+id/bottomKeyPad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/linear1"
@@ -148,42 +148,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="1"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
             <TextView
                 android:id="@+id/textview_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="2"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
             <TextView
                 android:id="@+id/textview_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="3"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
         </LinearLayout>
 
@@ -199,42 +199,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="4"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
             <TextView
                 android:id="@+id/textview_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="5"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
             <TextView
                 android:id="@+id/textview_6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="6"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -249,42 +249,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="7"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
             <TextView
                 android:id="@+id/textview_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="8"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
             <TextView
                 android:id="@+id/textview_9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="9"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -298,35 +298,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                />
+                android:textSize="@dimen/text_size_16sp" />
 
             <TextView
                 android:id="@+id/textview_0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
                 android:text="0"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_16sp"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_bold"
-                android:background="@drawable/custom_keyboard_key_bg"/>
+                android:textSize="@dimen/text_size_16sp" />
 
             <ImageView
                 android:id="@+id/button_back1"
                 android:layout_width="120dp"
                 android:layout_height="60dp"
                 android:layout_margin="5dp"
-                android:src="@drawable/ic_outline_backspace"
                 android:padding="15dp"
+                android:src="@drawable/ic_outline_backspace"
                 android:textAlignment="center" />
         </LinearLayout>
 
