--- a/app/src/main/res/layout/activity_retry_create_account.xml
+++ b/app/src/main/res/layout/activity_retry_create_account.xml
@@ -4,34 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.RetryCreateAccount"
+    android:background="@color/white"
     android:padding="25dp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
-    android:background="@color/white">
+    tools:context=".view.OTPValidation">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_above="@+id/tryAgainCV"
         android:layout_alignParentTop="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_error"/>
+            android:src="@drawable/ic_error" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Error: Look like we are having an issue with your OTP request, please retry again later."
-            android:textSize="@dimen/text_size_16sp"
-            android:textColor="@color/primary_black"
-            android:fontFamily="@font/opensans_regular"
-            android:layout_marginBottom="40dp"
             android:layout_marginTop="30dp"
-            />
+            android:layout_marginBottom="40dp"
+            android:fontFamily="@font/opensans_regular"
+            android:text="Error: Look like we are having an issue with your OTP request, please retry again later."
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/text_size_16sp" />
     </LinearLayout>
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/tryAgainCV"
         android:layout_width="match_parent"
