--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary_green">#00A6A2</color>
     <color name="text_color">#151515</color>
+    <color name="error">#E32B25</color>
 
 
     <color name="light_gray">#C5C5C5</color>
